RESOLVED FIXED228928
Fix yet another -Wreturn-type warning
https://bugs.webkit.org/show_bug.cgi?id=228928
Summary Fix yet another -Wreturn-type warning
Michael Catanzaro
Reported 2021-08-09 15:42:43 PDT
Fix yet another -Wreturn-type warning
Attachments
Patch for landing (1.20 KB, patch)
2021-08-09 15:43 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2021-08-09 15:43:23 PDT
Created attachment 435218 [details] Patch for landing
EWS
Comment 2 2021-08-09 16:49:00 PDT
Committed r280809 (240379@main): <https://commits.webkit.org/240379@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435218 [details].
Radar WebKit Bug Importer
Comment 3 2021-08-09 17:02:00 PDT
Note You need to log in before you can comment on or make changes to this bug.