Fix yet another -Wreturn-type warning https://bugs.webkit.org/show_bug.cgi?id=228928

Unreviewed.

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-08-09

* ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileGetByValImpl):

Canonical link: https://commits.webkit.org/240379@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280809 268f45cc-cd09-0410-ab3c-d52691b4dbfc